# CineCache

./: CMakeLists.txt  README.md  build.sh  extract_movies.py
data/: movies_db.txt
engine/: cache_node.h  cinecache_display.h  cinecache_scaling.h  cinecache_system.h  eviction_policy.h  ui.cpp  ui.h  utils.cpp  utils.h
include/cache/: dll_node.h
src/: main.cpp
src/cache/: lru_cache.cpp
src/data_structures/: doubly_linked_list.cpp  hash_table.cpp
src/database/: simulated_db.cpp
src/hashing/: consistent_hash.cpp  hash_functions.cpp
